{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 814,
  "lineage": "057dab8c-f6f4-373c-104a-b0fdade145e6",
  "resources": [
    {
      "module": "module.compute_engine",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projeto-483011/zones/europe-west1-b/disks/vm1-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/projeto-483011/zones/europe-west1-b/instances/vm1-instance",
            "instance_id": "8357268464243101510",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "3f1RbgkiO8I=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo apt update \u0026\u0026 sudo apt install -y nginx ssl-cert\n\ncat \u003c\u003cEOF | sudo tee /etc/nginx/sites-available/hello.conf\nserver {\n    listen 80;\n    listen 443 ssl;\n\n    # Self-signed certs\n    ssl_certificate     /etc/ssl/certs/ssl-cert-snakeoil.pem;\n    ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;\n\n    server_name _;\n\n    location / {\n        default_type text/plain;\n        return 200 \"OK, hello [...]
            "name": "vm1-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.251.202",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projeto-483011/regions/europe-west1/subnetworks/subnetwork",
                "subnetwork_project": "projeto-483011"
              }
            ],
            "project": "projeto-483011",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/zones/europe-west1-b/instances/vm1-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https-server"
            ],
            "tags_fingerprint": "nNZ0SA7CJyk=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_address.vm1-ip-address",
            "module.network.google_compute_network.this",
            "module.network.google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute_engine",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projeto-483011/zones/europe-west1-b/disks/vm2-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/projeto-483011/zones/europe-west1-b/instances/vm2-instance",
            "instance_id": "3835146592840109894",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "qgUEUSdjAoc=",
            "name": "vm2-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projeto-483011/regions/europe-west1/subnetworks/subnetwork",
                "subnetwork_project": "projeto-483011"
              }
            ],
            "project": "projeto-483011",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/zones/europe-west1-b/instances/vm2-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https-server"
            ],
            "tags_fingerprint": "nNZ0SA7CJyk=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this",
            "module.network.google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vm1-ip-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.251.202",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-12T14:10:49.401-08:00",
            "id": "projects/projeto-483011/regions/europe-west1/addresses/vm1-ipv4-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "vm1-ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "projeto-483011",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/regions/europe-west1/addresses/vm1-ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/projeto-483011/zones/europe-west1-b/instances/vm1-instance"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/projeto-483011/zones/europe-west1-b/instanceGroups/vm-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-12T14:12:18.351-08:00",
            "enable_cdn": false,
            "fingerprint": "Ikvjr0LXRU0=",
            "generated_id": 1330553967709048621,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/healthChecks/http-health-check"
            ],
            "id": "projects/projeto-483011/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "projeto-483011",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/securityPolicies/multi-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_engine.google_compute_instance_group_manager.default",
            "module.compute_engine.google_compute_instance_template.default",
            "module.network.google_compute_health_check.default",
            "module.network.google_compute_network.this",
            "module.network.google_compute_security_policy.multi_policy",
            "module.network.google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-12T14:11:11.423-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projeto-483011/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "priority": 1000,
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-12T14:11:11.188-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projeto-483011/global/firewalls/default-allow-internal",
            "log_config": [],
            "name": "default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "priority": 1000,
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/firewalls/default-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-12T14:11:11.334-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projeto-483011/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "priority": 2000,
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-ssh-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-01-12T14:11:11.218-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projeto-483011/global/firewalls/default-allow-ssh-icmp",
            "log_config": [],
            "name": "default-allow-ssh-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "priority": 2000,
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/firewalls/default-allow-ssh-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-01-12T14:11:11.327-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projeto-483011/global/firewalls/deny-all",
            "log_config": [],
            "name": "deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "priority": 65534,
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/firewalls/deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "load_balancer_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "130.211.22.238",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-12T14:10:49.481-08:00",
            "id": "projects/projeto-483011/global/addresses/load-balancer-ip",
            "name": "load-balancer-ip",
            "prefix_length": 0,
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/addresses/load-balancer-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/projeto-483011/global/forwardingRules/http-forwarding-rule",
            "ip_address": "130.211.22.238",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "port_range": "80-80",
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_engine.google_compute_instance_group_manager.default",
            "module.compute_engine.google_compute_instance_template.default",
            "module.network.google_compute_backend_service.default",
            "module.network.google_compute_global_address.load_balancer_ip",
            "module.network.google_compute_health_check.default",
            "module.network.google_compute_network.this",
            "module.network.google_compute_security_policy.multi_policy",
            "module.network.google_compute_subnetwork.this",
            "module.network.google_compute_target_http_proxy.default",
            "module.network.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/projeto-483011/global/forwardingRules/https-forwarding-rule",
            "ip_address": "130.211.22.238",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "https-forwarding-rule",
            "port_range": "443-443",
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/forwardingRules/https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/targetHttpsProxies/https-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_engine.google_compute_instance_group_manager.default",
            "module.compute_engine.google_compute_instance_template.default",
            "module.network.google_compute_backend_service.default",
            "module.network.google_compute_global_address.load_balancer_ip",
            "module.network.google_compute_health_check.default",
            "module.network.google_compute_managed_ssl_certificate.default",
            "module.network.google_compute_network.this",
            "module.network.google_compute_security_policy.multi_policy",
            "module.network.google_compute_subnetwork.this",
            "module.network.google_compute_target_https_proxy.default",
            "module.network.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/projeto-483011/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7045193587818549126",
            "project": "projeto-483011",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-12T14:11:11.212-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/projeto-483011/regions/europe-west1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "project": "projeto-483011",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/regions/europe-west1/routers/nat-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "projeto-483011/europe-west1/nat-router/nat-config",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "projeto-483011",
            "region": "europe-west1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this",
            "module.network.google_compute_router.nat-router"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "multi_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "J92nL2VTDb4=",
            "id": "projects/projeto-483011/global/securityPolicies/multi-policy",
            "name": "multi-policy",
            "project": "projeto-483011",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Bloquear tráfego fora de PT e ES",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "!(origin.region_code == 'PT' || origin.region_code == 'ES')"
                      }
                    ],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "throttle",
                "description": "Limitar 20 req/min por IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1200,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 0,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 20,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/securityPolicies/multi-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-12T14:11:11.405-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/projeto-483011/regions/europe-west1/subnetworks/subnetwork",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/networks/custom-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "projeto-483011",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/regions/europe-west1/subnetworks/subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-12T14:13:43.829-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/projeto-483011/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "projeto-483011",
            "proxy_bind": false,
            "proxy_id": 3345594761469283576,
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/urlMaps/url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_engine.google_compute_instance_group_manager.default",
            "module.compute_engine.google_compute_instance_template.default",
            "module.network.google_compute_backend_service.default",
            "module.network.google_compute_health_check.default",
            "module.network.google_compute_network.this",
            "module.network.google_compute_security_policy.multi_policy",
            "module.network.google_compute_subnetwork.this",
            "module.network.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-12T14:13:43.961-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/projeto-483011/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "projeto-483011",
            "proxy_bind": false,
            "proxy_id": 9068348360779943160,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/sslCertificates/managed-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/urlMaps/url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_engine.google_compute_instance_group_manager.default",
            "module.compute_engine.google_compute_instance_template.default",
            "module.network.google_compute_backend_service.default",
            "module.network.google_compute_health_check.default",
            "module.network.google_compute_managed_ssl_certificate.default",
            "module.network.google_compute_network.this",
            "module.network.google_compute_security_policy.multi_policy",
            "module.network.google_compute_subnetwork.this",
            "module.network.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-12T14:13:32.536-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "1ZYE9x0dZ3c=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/projeto-483011/global/urlMaps/url-map",
            "map_id": 5442738330448481507,
            "name": "url-map",
            "path_matcher": [],
            "project": "projeto-483011",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projeto-483011/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_engine.google_compute_instance_group_manager.default",
            "module.compute_engine.google_compute_instance_template.default",
            "module.network.google_compute_backend_service.default",
            "module.network.google_compute_health_check.default",
            "module.network.google_compute_network.this",
            "module.network.google_compute_security_policy.multi_policy",
            "module.network.google_compute_subnetwork.this"
          ]
        }
      ]
    }
  ]
}